--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Index</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            background-color: #E6D5B8;
+            color: #5C3D2E;
+        }
+        nav {
+            background-color: #5C3D2E;
+            padding: 1%;
+        }
+        nav a {
+            color: #E6D5B8;
+            margin: 0 30px;
+            text-decoration: none;
+            font-size: 22px;
+            font-weight: bold;
+        }
+        .title-box {
+            margin: 30px auto;
+            padding: 20px;
+            background-color: #FFFDF2;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(92, 61, 46, 0.3);
+            width: 50%;
+        }
+        .title-box h1 {
+            font-size: 30px;
+        }
+        .image-placeholder {
+            margin: 20px auto;
+            width: 70%;
+            height: 300px;
+            background-color: #FFFDF2;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 10px;
+            font-size: 18px;
+            color: #5C3D2E;
+        }
+    </style>
+</head>
+<body>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#people">People</a>
+        <a href="#about">About</a>
+    </nav>
+    
+    <div class="title-box">
+        <h1>TITLE</h1>
+    </div>
+    
+    <div class="image-placeholder">
+    <h1> IMAGE</h1>
+    </div>
+</body>
+</html>
