Updated index for homepagee
Changed sizes and colors

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             padding: 0;
             text-align: center;
             background-color: #E9F1FA;
-            color: #000000;
+            color: #0062A9;
         }
         nav {
             background-color: #00ABE4;
@@ -19,9 +19,9 @@
         }   
         nav a {
             color: #000000;
-            margin: 0 30px;
+            margin: 0 100px;
             text-decoration: none;
-            font-size: 22px;
+            font-size: 16px;
             font-weight: bold;
         }
         .title-box {
@@ -32,7 +32,7 @@
             width: 50%;
         }
         .title-box h1 {
-            font-size: 30px;
+            font-size: 40px;
         }
         .image-placeholder {
             margin: 20px auto;
@@ -56,7 +56,7 @@
     </nav>
     
     <div class="title-box">
-        <h1>Integrative Programming Technologies 2</h1>
+        <h1>INTEGRATIVE PROGRAMMING TECHNOLOGIES 2</h1>
     </div>
     
     <div class="image-placeholder">
